--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,4 +1,4 @@
-name: Scrape LeekDuck
+name: Dev Scrape LeekDuck
 
 on:
   schedule:
@@ -13,6 +13,7 @@ jobs:
         with:
             persist-credentials: false
             fetch-depth: 0
+            ref: dev
 
       - uses: actions/setup-node@v3
         with:
@@ -43,7 +44,7 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git switch --orphan data
+          git switch --orphan devdata
           git add --all
           git commit -m 'Data updated'
 
@@ -51,5 +52,5 @@ jobs:
         uses: ad-m/github-push-action@v0.6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: data
+          branch: devdata
           force: true
